--- a/Smart-Indoor-Climate-Monitor-with-Local-Display/platformio.ini
+++ b/Smart-Indoor-Climate-Monitor-with-Local-Display/platformio.ini
@@ -12,3 +12,8 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_deps = 
+	adafruit/Adafruit GFX Library@^1.12.4
+	espressif/WROVER KIT LCD@^1.0.3
+	adafruit/Adafruit BME280 Library@^2.3.0
+	adafruit/Adafruit SSD1306@^2.5.15
