--- a/Smart-Indoor-Climate-Monitor-with-Local-Display/platformio.ini
+++ b/Smart-Indoor-Climate-Monitor-with-Local-Display/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	espressif/WROVER KIT LCD@^1.0.3
 	adafruit/Adafruit BME280 Library@^2.3.0
 	adafruit/Adafruit SSD1306@^2.5.15
+upload_speed = 921600
